lab4/test/96-unterminated.oc.err
96-unterminated.oc:6:15: warning: missing terminating " character [enabled by default]
    string s = "abc;
               ^
96-unterminated.oc:7:13: warning: missing terminating ' character [enabled by default]
    char c = 'a;
             ^
96-unterminated.oc:8:8: warning: missing terminating " character [enabled by default]
    s = "abcd\";
        ^
96-unterminated.oc:9:8: warning: missing terminating " character [enabled by default]
    s = "abc|\
        ^
Ø.d:5.15: invalid token ("\*/")
Ø.d:5.20: syntax error, unexpected ';'
Ø.d:6.15: invalid token ("abc;)
Ø.d:7.9: syntax error, unexpected TOK_IDENT
Ø.d:7.13: invalid token ('a;)
Ø.d:8.8: invalid token ("abcd\";)
Ø.d:9.8: invalid token ("abc|   ;)
Ø.d:11.8: invalid token (23foobar)
